Fix z-index nightmare

--- a/src/components/Common/SideMenu/index.less
+++ b/src/components/Common/SideMenu/index.less
@@ -45,7 +45,6 @@
 
 .menuContainerOuter {
   top: 0;
-  z-index: 1;
   min-height: calc(~"100vh") !important;
   width: 80px !important;
   overflow: hidden !important;
@@ -55,7 +54,7 @@
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.15) !important;
 
   .menuContainerInner {
-    margin-top: 200px;
+    margin-top: 199px;
 
     ul {
       .menuItem {
