--- a/src/layouts/StoreLayout.less
+++ b/src/layouts/StoreLayout.less
@@ -4,12 +4,17 @@ body {
   background-color: @luca-main-bg;
 }
 
+.storeLayoutContent {
+  //position: absolute;
+  //top: 200px;
+}
+
 .appBar {
   display: block;
   width: 100%;
   height: 80px;
   padding: 0 20px 0 0;
-  z-index: 10;
+  //z-index: 10;
   position: relative;
   background-color: @luca-main-bg;
   .appTitle {
@@ -60,11 +65,13 @@ body {
 }
 
 :global(.ant-layout-header) {
-  height: 100px;
+  height: 80px;
   width: 100%;
   padding: 0;
   margin: 0;
   overflow: hidden;
+  position: absolute;
+  z-index: 1;
 }
 
 :global(.ant-layout-content) {
